[package]
name = "canvas-rust-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Performance",
] }
js-sys = "0.3"
web-time = "0.1"

[profile.release]
opt-level = 3
