[package]
name = "canvas-rust-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Performance",
    "HtmlImageElement",
] }
js-sys = "0.3"
web-time = "0.1"
ehttp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.25"

[profile.release]
opt-level = 3
